App using env for endpoint. Misc fixes.
Replace hard-coded endpoint w/ env setting.
Move dynamic part to article for easy wiping.
Count by label to demo that we can count.
Color labels and make the text more readable with a background rect.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "4.16.2",
     "formidable": "1.1.1",
     "metrics-tracker-client": "^0.2.3",
