--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-node": "^5.2.1",
+    "istanbul": "^0.4.5",
     "jsdom": "^11.6.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.0",
