--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "4.16.2",
-    "request": "2.83.0"
+    "request": "^2.87.0"
   },
   "engines": {
     "node": "8.x"
