--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "homepage": "https://github.com/IBM/powerai-vision-object-detection#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.16.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-plugin-node": "^5.2.1",
+    "chai": "^4.2.0",
+    "eslint": "^5.10.0",
+    "eslint-config-google": "^0.11.0",
+    "eslint-plugin-node": "^8.0.0",
     "istanbul": "^0.4.5",
-    "jsdom": "^11.6.2",
+    "jsdom": "^13.0.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.0.0",
-    "sinon": "^4.2.2",
-    "sinon-test": "^2.1.3"
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.0",
+    "sinon-test": "^2.4.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -34,9 +34,9 @@
     "unit": "istanbul cover _mocha -V test/unit -- -R spec"
   },
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "express": "4.16.2",
-    "request": "^2.87.0"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "request": "^2.88.0"
   },
   "engines": {
     "node": "8.x"
