--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 dist: trusty
-node_js: 6
+node_js:
+  - 8
+  - 10
 script:
-- npm run test
+  - npm run test
 cache:
   directories:
   - node_modules
