--- a/package.json
+++ b/package.json
@@ -22,16 +22,27 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.0",
+    "remark-cli": "^7.0.0",
+    "remark-lint": "^6.0.5",
+    "remark-lint-no-dead-urls": "^0.5.0",
+    "remark-validate-links": "^9.0.1",
     "sinon": "^7.4.1",
     "sinon-test": "^2.4.0"
   },
   "scripts": {
     "start": "node app.js",
+    "lint-md": "./node_modules/.bin/remark -f --ignore-pattern *ja.md .",
     "lint": "npm run lint:javascript",
     "eslint": "eslint *.js js test",
     "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "npm run unit && npm run eslint",
+    "test": "npm run lint-md && npm run unit && npm run eslint",
     "unit": "istanbul cover _mocha -V test/unit -- -R spec"
+  },
+  "remarkConfig": {
+    "plugins": [
+      "remark-validate-links",
+      "remark-lint-no-dead-urls"
+    ]
   },
   "dependencies": {
     "dotenv": "^8.0.0",
@@ -41,6 +52,6 @@
     "request": "^2.88.0"
   },
   "engines": {
-    "node": "8.x"
+    "node": ">=8.0.0"
   }
 }
