--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "istanbul": "^0.4.5",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
+    "markdownlint-cli": "^0.17.0",
     "mocha": "^6.2.0",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
@@ -31,11 +32,12 @@
   },
   "scripts": {
     "start": "node app.js",
+    "markdownlint": "./node_modules/.bin/markdownlint README.md",
     "lint-md": "./node_modules/.bin/remark -f --ignore-pattern *ja.md .",
     "lint": "npm run lint:javascript",
     "eslint": "eslint *.js js test",
     "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "npm run lint-md && npm run unit && npm run eslint",
+    "test": "npm run markdownlint && npm run lint-md && npm run unit && npm run eslint",
     "unit": "istanbul cover _mocha -V test/unit -- -R spec"
   },
   "remarkConfig": {
